Fix whitespace

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -46,7 +46,7 @@
 
 [data-tooltip] {
   position: relative;
-  white-space: no-wrap;
+  white-space: nowrap;
 }
 
 [data-tooltip]:before,
